[project]
name = "proxy-server"
version = "0.1.1"
description = "A simple proxy server implemented in Python."
readme = "README.md"
requires-python = ">=3.13,<=3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.136.0",
    "mysql-connector==2.2.9",
    "pydantic==2.13.3",
    "requests==2.33.1",
    "uvicorn==0.46.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "bandit==1.9.4",
    "pyright==1.1.409",
]

[tool.bandit]
exclude_dirs = [".venv"]
